# flashman

./: .gitignore  CMakeLists.txt  flashman.sln  readme.txt
Debug/: flashman.exp  flashman.lib
flashman/: db.h  flashboy.c  flashman.vcxproj  flashman.vcxproj.filters  main.c
flashman/Debug/: flashman.exe.recipe  flashman.ilk  main.obj.enc  vc142.idb
flashman/Debug/flashman.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  flashman.lastbuildstate  flashman.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
flashman/hidapi/: hidapi.lib
src/: flashboy.c  flashboy.h  main.c
